feat: add filter-section in allblogs page and improve styling

--- a/app/globals.css
+++ b/app/globals.css
@@ -112,12 +112,31 @@
   --sidebar-ring: oklch(0.556 0 0);
 }
 
+::-webkit-scrollbar {
+  display: none;
+  width: 6px;
+  border-radius: 9999px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #4285f4;
+  border-radius: 9999px;
+}
+:hover::-webkit-scrollbar-thumb {
+  scale: 5;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 9999px;
+}
+
 @layer base {
   * {
-    @apply border-border outline-ring/5;
+    @apply border-border outline-ring/5 scroll-smooth;
   }
   body {
-    @apply bg-gradient-to-r from-slate-900 to-slate-700 text-background;
+    @apply bg-gradient-to-r from-slate-900 to-slate-700 text-background scroll-smooth;
   }
 }
 
@@ -129,7 +148,6 @@
     @apply relative h-6 before:block before:content-[''] before:w-1 before:bg-white/60;
   }
   .tag {
-    @apply flex items-center justify-center w-fit px-2 text-xs bg-transparent text-green-400 border-1 border-green-400 rounded-2xl;
+    @apply flex items-center justify-center w-fit px-2 py-0.5 text-xs bg-green-200 text-green-800 hover:ring-1 hover:ring-green-900 rounded-2xl capitalize;
   }
-  
 }
