fix: improve styling and fix bugs

--- a/app/globals.css
+++ b/app/globals.css
@@ -148,6 +148,6 @@
     @apply relative h-6 before:block before:content-[''] before:w-1 before:bg-white/60;
   }
   .tag {
-    @apply flex items-center justify-center w-fit px-2 py-0.5 text-xs bg-green-200 text-green-800 hover:ring-1 hover:ring-green-900 rounded-2xl capitalize;
+    @apply flex items-center cursor-pointer justify-center w-fit px-2 py-0.5 text-xs bg-green-200 text-green-800 hover:ring-1 hover:ring-green-900 rounded-2xl capitalize;
   }
 }
